examples/test/testpolicy16903.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16903
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key7: value46
      key18: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value35
          key17: value7
      podSelector:
        matchLabels:
          key8: value22
          key27: value37
          key13: value39
